--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "4000:4000"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   remove_task:
     build:
@@ -16,6 +17,7 @@ services:
       - "4001:4001"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   edit_task:
     build:
@@ -25,6 +27,8 @@ services:
       - "4002:4002"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
+    
 
   mark_done:
     build:
@@ -34,6 +38,7 @@ services:
       - "4003:4003"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   get_tasks:
     build:
@@ -43,6 +48,7 @@ services:
       - "4004:4004"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   search_task:
     build:
@@ -52,6 +58,7 @@ services:
       - "4005:4005"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   sort_tasks:
     build:
@@ -61,6 +68,7 @@ services:
       - "4006:4006"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   reset_tasks:
     build:
@@ -70,6 +78,7 @@ services:
       - "4007:4007"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   register:
     build:
@@ -79,6 +88,7 @@ services:
       - "4008:4008"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   login:
     build:
@@ -88,7 +98,9 @@ services:
       - "4009:4009"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
+  
   delete_user:
     build:
       context: ./backend/delete_user
@@ -97,6 +109,7 @@ services:
       - "4010:4010"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
+    restart: always
 
   get_tasks_nodejs:
     build:
@@ -104,6 +117,7 @@ services:
     container_name: get_tasks_nodejs_service
     ports:
       - "5000:5000"
+    restart: always
 
   reset_tasks_nodejs:
     build:
@@ -111,6 +125,7 @@ services:
     container_name: reset_tasks_nodejs_service
     ports:
       - "5001:5001"
+    restart: always
 
   frontend:
     build:
@@ -120,3 +135,4 @@ services:
       - "3000:3000"
     stdin_open: true
     tty: true
+    restart: always
