--- a/nodejs-services/get_tasks/package.json
+++ b/nodejs-services/get_tasks/package.json
@@ -4,11 +4,16 @@
   "description": "Node.js service for fetching tasks",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "cors": "^2.8.5"
+  },
+  "devDependencies": {
+  "jest": "^29.0.0",
+  "supertest": "^6.3.0"
   }
 }
