--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       - "4004:4004"
     environment:
       - MONGO_URI=mongodb+srv://ronybubnovsky:UX4st2u29gvKGqbu@taskmanager.qjg5t.mongodb.net/?retryWrites=true&w=majority&appName=TaskManager
-    # restart: always
+    restart: always
 
   search_task:
     build:
@@ -116,7 +116,7 @@ services:
       context: ./nodejs-services/get_tasks
     container_name: get_tasks_nodejs_service
     ports:
-      - "5007:5000"
+      - "5007:5007"
     restart: always
 
   reset_tasks_nodejs:
@@ -132,7 +132,7 @@ services:
       context: ./backend/analyze_tasks
     container_name: analyze_tasks_service
     ports:
-      - "5002:5000"
+      - "5002:5002"
     restart: always
 
   share_tasks:
@@ -140,7 +140,7 @@ services:
       context: ./backend/share_tasks
     container_name: share_tasks_service
     ports:
-      - "5003:5000"
+      - "5003:5003"
     restart: always
 
   sync_tasks:
@@ -148,7 +148,7 @@ services:
       context: ./backend/sync_tasks
     container_name: sync_tasks_service
     ports:
-      - "5004:5000"
+      - "5004:5004"
     restart: always
 
 
